# responder

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: HeaderTable.vue  SelectLanguage.vue  StatusField.vue  index.js
frontend/src/utils/: constants.js  index.js
src/: lib.rs  main.rs  query.rs  response.rs
templates/: index.html
