[package]
name = "responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
b64 = "0.4.0"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
