[package]
name = "responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
b64 = "0.4.0"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["make"] }
